fix(i6): count only complete published copy in quality stats